# cinepolis-natal-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  product-requirements-document.md  pyproject.toml  software-requirements-specification.md.md
.github/workflows/: main.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  manage.py  pyproject.toml
backend/catalog/: admin.py  models.py  serializers.py  urls.py  views.py
backend/cinepolis_natal_api/: asgi.py  celery.py  celery_signals.py  exception_handler.py  health.py  logging.py  logging_context.py  middleware.py  permissions.py  settings.py  tasks.py  throttling.py  urls.py  views.py
backend/postman/: Cinepolis-Natal-API.postman_collection.json
backend/reservations/: admin.py  exceptions.py  locks.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/users/: admin.py  auth_urls.py  models.py  serializers.py  urls.py  views.py
catalog/: admin.py  models.py  serializers.py  views.py
catalog/migrations/: 0001_initial.py
cinepolis_natal_api/: celery.py  celery_signals.py  middleware.py  settings.py  tasks.py  throttling.py  urls.py  views.py  wsgi.py
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.js  frontend-product-requirements-document.md  package-lock.json  package.json  tsconfig.json
frontend/src/api/: auth.ts  (+3 more)
postman/: Cinepolis-Natal-Local.postman_environment.json
reservations/: admin.py  exceptions.py  models.py  serializers.py  tasks.py  urls.py  views.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
(+97 files in other folders)
